    (Charles Gariépy-Ikeson via tomwhite)

    AVRO-1645. Ruby: Improved handling of missing named types.
    (Daniel Schierbeck via tomwhite)

    AVRO-1693. Ruby: Allow writing arbitrary metadata to data files.
    (Daniel Schierbeck via tomwhite)

    AVRO-1697. Ruby: Add support for the Snappy codec to the Ruby library.
    (Daniel Schierbeck via tomwhite)

  BUG FIXES

    AVRO-1553. Java: MapReduce never uses MapOutputValueSchema (tomwhite)

    AVRO-1544. Java: Fix GenericData#validate for unions with null.
    (Matthew Hayes via cutting)

    AVRO-1589. Java: Fix ReflectData.AllowNulls to not create unions
    for primitive types. (Ryan Blue via cutting)

    AVRO-1591. Java: Fix specific RPC so that proxies implement hashCode(),
    equals() and toString(). (Mark Spadoni via cutting)

    AVRO-1489. Java: Avro fails to build with OpenJDK 8. (Ricardo Arguello via
    tomwhite)

    AVRO-1302. Python: Update documentation to open files as binary to
    prevent EOL substitution. (Lars Francke via cutting)

    AVRO-1598. Java: Fix flakiness in TestFileSpanStorage.
    (Ryan Blue via cutting)

    AVRO-1592. Java: Fix handling of Java reserved words as enum
    constants in generated code. (Lukas Steiblys via cutting)

    AVRO-1597. Java: Random data tool writes corrupt files to standard out.
    (cutting)

    AVRO-1596. Java: Cannot read past corrupted block in Avro data file.
    (tomwhite)

    AVRO-1564. Java: Fix handling of optional byte field in Thrift.
    (Michael Pershyn via cutting)

    AVRO-1407: Java: Fix infinite loop on slow connect in NettyTransceiver.
    (Gareth Davis via cutting)

    AVRO-1604. Java: Fix ReflectData.AllowNull to work with @Nullable
    annotations. (Ryan Blue via cutting)

    AVRO-1545. Python. Fix to retain schema properties on primitive types.
    (Dustin Spicuzza via cutting)

    AVRO-1623. Java: Fix GenericData#validate to correctly resolve unions.
    (Jeffrey Mullins via cutting)
